2021-08-27  Ayumi Kojima  <ayumi_kojima@apple.com>

        [Mac wk2] http/tests/media/hls/hls-webvtt-seek-backwards.html is a flaky timeout.
        https://bugs.webkit.org/show_bug.cgi?id=228189

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2021-08-27  Andres Gonzalez  <andresg_22@apple.com>

        Make AXCoreObject::setSelectedVisiblePositionRange work in native text controls on MacOS.
        https://bugs.webkit.org/show_bug.cgi?id=229529

        Reviewed by Chris Fleizach.

        * accessibility/mac/native-text-control-set-selected-textmarker-range-expected.txt: Added.
        * accessibility/mac/native-text-control-set-selected-textmarker-range.html: Added.

2021-08-27  Martin Robinson  <mrobinson@webkit.org>

        [css-position-sticky] Update WPT position:sticky tests
        https://bugs.webkit.org/show_bug.cgi?id=229555

        Reviewed by Sergio Villar Senin.

        * TestExpectations: Unskip newly passing tests.

2021-08-26  Myles C. Maxfield  <mmaxfield@apple.com>

        Synthetic bold additional advances need to be applied after shaping
        https://bugs.webkit.org/show_bug.cgi?id=189448
        <rdar://problem/40994395>

        Reviewed by Alan Bujtas.

        These tests are progressions.

        * fast/text/osaka-synthetic-bold-expected.txt: Added.
        * fast/text/osaka-synthetic-bold.html: Added.
        * platform/ios/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
        * platform/mac-catalina/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
        * platform/mac-mojave/imported/w3c/web-platform-tests/mathml/relations/css-styling/ignored-properties-001-expected.txt:
        * platform/mac/fast/text/atsui-multiple-renderers-expected.png: Added.
        * platform/mac/fast/text/atsui-multiple-renderers-expected.txt:
        * platform/mac/fonts/cursive-expected.png: Added.