@@ -1,3 +1,12 @@
+2021-08-27  Martin Robinson  <mrobinson@webkit.org>
+
+        [css-position-sticky] createIndicatorForStickyElements testing function races with font loading
+        https://bugs.webkit.org/show_bug.cgi?id=229602
+
+        Reviewed by Žan Doberšek.
+
+        * TestExpectations: Mark a test as newly passing.
+
 2021-08-27  Ayumi Kojima  <ayumi_kojima@apple.com>
 
         [Mac wk2] http/tests/media/hls/hls-webvtt-seek-backwards.html is a flaky timeout.
